# template-opengl

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  Makefile  README.md  appveyor.yml  imgui.ini
3d/: CMakeLists.txt  main.cpp
3d-tutorial/: main.cpp
3d/include/: application.hpp  game.hpp  model_loader.hpp  obj_loader.hpp  raw_model.hpp  renderer.hpp  resource_manager.hpp  settings.hpp  shader.hpp  shader_old.hpp  shader_source.hpp  shape.hpp  warning.hpp
3d/include/core/: common.hpp  shader_source.hpp
3d/include/render/: window.hpp
3d/include/shape/: cube.hpp
3d/src/: application.cpp  game.cpp  log.cpp  resource_manager.cpp  shader.cpp  texture.cpp
3d/src/render/: sprite.cpp  texture.cpp
app/: CMakeLists.txt  main.cpp
app/include/: SOIL.hpp  application.hpp  collision.hpp  data.hpp  game.hpp  game_level.hpp  level.hpp  linmath.hpp  resource_manager.hpp  settings.hpp  shader.hpp  texture.hpp  window.hpp
app/include/entity/: ball.hpp  ball_object.hpp  entity.hpp  game_object.hpp
app/include/render/: particle_generator.hpp  sprite_renderer.hpp
app/src/: application.cpp  collision.cpp  game.cpp  game_level.cpp  resource_manager.cpp  shader.cpp  texture.cpp  window.cpp
app/src/entity/: ball.cpp  ball_object.cpp  entity.cpp  game_object.cpp
app/src/render/: particle_generator.cpp  shader.cpp  sprite_renderer.cpp
breakout/: CMakeLists.txt  main.cpp
breakout/include/: collision.hpp  game.hpp  level.hpp  resource_manager.hpp  settings.hpp  util.hpp
breakout/include/entity/: ball.hpp  entity.hpp
breakout/include/render/: particle_generator.hpp
breakout/src/: collision.cpp  game.cpp  level.cpp
breakout/src/entity/: entity.cpp
breakout/src/render/: particle_generator.cpp  sprite_renderer.cpp  texture.cpp
cmake/: CompilerWarnings.cmake  ConfigureOpenGL.cmake
docs/: OPENGL.md
examples/: CMakeLists.txt  getting_started.cpp  shader_class.cpp  textures.cpp
examples/include/: settings.hpp  shader.hpp  shader_source.hpp  shaders.hpp
lib/imgui/: CMakeLists.txt
lib/soil/src/: soil.cpp
mini_games/: CMakeLists.txt
mini_games/3d-tutorial/: CMakeLists.txt  tutorial07.cpp
mini_games/3d-tutorial/src/: controls.cpp
mini_games/breakout/: CMakeLists.txt
mini_games/breakout/include/: settings.hpp  util.hpp
mini_games/breakout/include/entity/: entity.hpp
mini_games/breakout/include/render/: sprite_renderer.hpp
mini_games/breakout/src/: resource_manager.cpp
mini_games/tunnel/: CMakeLists.txt  main.cpp
mini_games/tunnel/include/: resource_manager.hpp  warning.hpp
mini_games/tunnel/include/entity/: entity.hpp
mini_games/tunnel/include/render/: particle.hpp  texture.hpp
mini_games/tunnel/src/: game.cpp
mini_games/tunnel/src/entity/: entity.cpp
remisen_run/: CMakeLists.txt  main.cpp
remisen_run/include/core/: common.hpp  log.hpp  warning.hpp
remisen_run/include/shape/: cube.hpp  shape.hpp
remisen_run/src/: application.cpp
remisen_run/src/render/: shader.cpp  window.cpp
resources/3d-tutorial/: Billboard.fragmentshader  Billboard.vertexshader  Particle.fragmentshader  Particle.vertexshader
resources/3d/shader/: fragment.glsl  main_fs.glsl  vertex.glsl
resources/levels/: 001.lvl  002.lvl
resources/shaders/: partical_fs.glsl  particle_fs.glsl  particle_vs.glsl  sprite_fs.glsl  sprite_vs.glsl
shaders/: sprite_fs.glsl
src/: CMakeLists.txt  main.cpp
tunnel/: CMakeLists.txt  main.cpp
tunnel/include/: application.hpp  game.hpp  settings.hpp
tunnel/include/entity/: entity.hpp
tunnel/include/render/: particle.hpp
tunnel/src/: application.cpp  collision.cpp  game.cpp  resource_manager.cpp
tunnel/src/render/: particle.cpp
